# deep-diff

./: .gitignore  .octocov.yml  .pymarkdown.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  pyproject.toml  renovate.json
.beads/: metadata.json
.beads/dolt.20260308T034939Z.corrupt.backup/: config.yaml
.beads/hooks/: pre-commit  pre-push
.github/: CODEOWNERS  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  labels.yml  links.yml  lint.yml  lock.yml  release.yml
benchmarks/: bench_parallel.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
docs/adr/: 000-template.md  001-layered-pipeline.md  002-protocol-over-abc.md
docs/userGuide/: README.md  advanced.md  depth-levels.md  filtering.md  getting-started.md  git-refs.md  output-modes.md  plugins.md  quick-reference.md  snapshots.md  watch-mode.md
examples/left/: .env  README.md  app.py  config.py  utils.py
examples/right/: .env  README.md  app.py  helpers.py
src/deep_diff/: __init__.py
tests/: conftest.py
tests/test_cli/: conftest.py  test_app.py
tests/test_core/: test_comparator.py  test_content.py  test_diff_utils.py  test_filtering.py  test_models.py  test_parallel.py  test_plugins.py  test_public_api.py  test_snapshot.py  test_structure.py  test_text.py  test_watcher.py
tests/test_git/: conftest.py  test_commands.py  test_resolver.py
tests/test_output/: test_html_output.py  test_json_output.py  test_rich_output.py
tests/test_plugins/: test_json_plugin.py  (+1 more)
(+39 files in other folders)
