[project]
name = "deep-diff"
version = "0.1.0"
description = "Compare files and directories with clarity."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "pathspec>=0.12.0",
]

[project.scripts]
deep-diff = "deep_diff.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_diff"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["deep_diff"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["deep_diff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# Run with coverage: uv run pytest --cov=deep_diff --cov-report=term-missing

[tool.coverage.run]
source = ["deep_diff"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
